src/main/kotlin/com/example/msproduct/errors/ErrorCustomized.kt
package com.example.msproduct.errors

import org.springframework.http.HttpStatus

data class ErrorCustomized (
    var code: HttpStatus = HttpStatus.BAD_REQUEST,
    var message : String? = null
)